# Almond

./: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
almond/: bot.py  constants.py  helpers.py  logger.py  settings.py
almond/cogs/: __init__.py  events.py  monitoring.py
